tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@spread_non_map.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/spread_non_map.txt
---
error: Spread operator requires a map, found `i64`
 --> spread_non_map.txt:1:8
  |
1 | {{ {...age} }}
  |        ^^^
